; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/riva/extr_fbdev.c_CRTCin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/riva/extr_fbdev.c_CRTCin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.riva_par = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (%struct.riva_par*, i8)* @CRTCin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @CRTCin(%struct.riva_par* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.riva_par*, align 8
  %4 = alloca i8, align 1
  store %struct.riva_par* %0, %struct.riva_par** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.riva_par*, %struct.riva_par** %3, align 8
  %6 = getelementptr inbounds %struct.riva_par, %struct.riva_par* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i8, i8* %4, align 1
  %10 = call i32 @VGA_WR08(i32 %8, i32 980, i8 zeroext %9)
  %11 = load %struct.riva_par*, %struct.riva_par** %3, align 8
  %12 = getelementptr inbounds %struct.riva_par, %struct.riva_par* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call zeroext i8 @VGA_RD08(i32 %14, i32 981)
  ret i8 %15
}

declare dso_local i32 @VGA_WR08(i32, i32, i8 zeroext) #1

declare dso_local zeroext i8 @VGA_RD08(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
